削除: 不要な管理者ダッシュボードおよび持ち出し管理テンプレートファイルを削除、関連コントローラー・リポジトリロジックをリファクタリング